--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -124,7 +124,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.9.1",
+   "display_name": "Julia 1.9.0-rc3",
    "language": "julia",
    "name": "julia-1.9"
   },
